Fix Gradle build for 2.5.0